# autoware.universe

.github/: CODEOWNERS
.github/workflows/: build-and-test-for-branch.yaml  build-and-test.yaml
common/tier4_automatic_goal_rviz_plugin/config/: goal_list.yaml
common/tier4_automatic_goal_rviz_plugin/src/: automatic_goal_panel.cpp  automatic_goal_sender.cpp  automatic_goal_sender.hpp
common/tier4_autoware_utils/: CMakeLists.txt
common/tier4_rosbag_tool_rviz_plugin/: CMakeLists.txt  package.xml
common/tier4_rosbag_tool_rviz_plugin/plugins/: plugin_description.xml
common/tier4_rosbag_tool_rviz_plugin/src/: rosbag_tool_panel.cpp  rosbag_tool_panel.hpp
common/traffic_light_utils/: package.xml
common/traffic_light_utils/src/: traffic_light_utils.cpp
control/autonomous_emergency_braking/: CMakeLists.txt  package.xml
control/autonomous_emergency_braking/include/autonomous_emergency_braking/: node.hpp
control/autonomous_emergency_braking/test/: aeb_node_test.cpp
control/autoware_autonomous_emergency_braking/src/: node.cpp
control/autoware_pid_longitudinal_controller/src/: pid_longitudinal_controller.cpp
evaluator/perception_online_evaluator/: CMakeLists.txt  README.md
evaluator/perception_online_evaluator/param/: perception_online_evaluator.defaults.yaml
evaluator/perception_online_evaluator/src/: metrics_calculator.cpp  perception_online_evaluator_node.cpp
evaluator/perception_online_evaluator/test/: test_perception_online_evaluator_node.cpp
launch/tier4_autoware_api_launch/launch/: autoware_api.launch.xml
launch/tier4_perception_launch/launch/: perception.launch.xml
launch/tier4_planning_launch/: package.xml
launch/tier4_planning_launch/launch/: planning.launch.xml
launch/tier4_system_launch/: package.xml
launch/tier4_system_launch/launch/: system.launch.xml
perception/map_based_prediction/: CMakeLists.txt  package.xml
planning/: .pages
planning/autoware_behavior_path_planner_common/: package.xml
planning/autoware_static_centerline_generator/: package.xml
planning/autoware_surround_obstacle_checker/: package.xml
planning/behavior_path_avoidance_by_lane_change_module/: CMakeLists.txt
planning/behavior_path_avoidance_module/: CMakeLists.txt
planning/behavior_path_dynamic_avoidance_module/: CMakeLists.txt
planning/behavior_path_lane_change_module/: CMakeLists.txt
planning/behavior_path_planner/: CMakeLists.txt
planning/behavior_path_planner_common/: CMakeLists.txt
planning/behavior_velocity_planner_common/: package.xml
planning/planning_validator/: package.xml
system/emergency_handler/: package.xml
(+90 files in other folders)
